--- a/Softmax Libraries/Softmax.Logging.NLog/Dtat.Logging.NLog.csproj
+++ b/Softmax Libraries/Softmax.Logging.NLog/Dtat.Logging.NLog.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Softmax.Logging\Softmax.Logging.csproj" />
+    <ProjectReference Include="..\Softmax.Logging\Dtat.Logging.csproj" />
   </ItemGroup>
 
 </Project>
