--- a/Softmax Libraries/Softmax.Utilities.Log/Softmax.Utilities.Log.csproj
+++ b/Softmax Libraries/Softmax.Utilities.Log/Softmax.Utilities.Log.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Softmax.Logging\Softmax.Logging.csproj" />
+    <ProjectReference Include="..\Softmax.Logging\Dtat.Logging.csproj" />
   </ItemGroup>
 
 </Project>
