--- a/LearningEnglishWords/appsettings.Development.json
+++ b/LearningEnglishWords/appsettings.Development.json
@@ -9,10 +9,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlServerConnectionString": "Data Source = SQL5107.site4now.net;  Initial Catalog = db_a842d3_learningenglish; User ID = db_a842d3_learningenglish_admin; Password = m@13811386;"
+    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW_Admin; Password = Morteza@Mm@13811386;"
   },
-  "AppSettings": {
-    "TokenExpiresTime": 5,
-    "SecretKeyForToken": "s@@@#33dfddsgfgafg615153gafagff$#@^&*...//XZcZCXC"
+  "ApplicationSettings": {
+    "JwtSettings": {
+      "TokenExpiresTime": 5,
+      "SecretKeyForToken": "s@@@#33dfddsgfgafg615153gafagff$#@^&*...//XZcZCXC"
+    }
   }
 }
