Improve the project structure!

--- a/LearningEnglishWords/nlog.config
+++ b/LearningEnglishWords/nlog.config
@@ -66,7 +66,7 @@
 		<logger name="*" level="Fatal" writeTo="LogFatalToFile" />
 		<logger name="*" level="Error" writeTo="LogErrorToFile" />
 		<logger name="*" level="Warn" writeTo="LogWarningFile" />
-		<logger name="*" level="Info" writeTo="LogInfoFile" />
-		<logger name="*" minlevel="Trace" maxlevel="Debug" writeTo="LogTraceToDebugFile" />
+		<!--<logger name="*" level="Info" writeTo="LogInfoFile" />-->		
+		<!--<logger name="*" minlevel="Trace" maxlevel="Debug" writeTo="LogTraceToDebugFile" />-->
 	</rules>
 </nlog>
