--- a/LearningEnglishWords/appsettings.json
+++ b/LearningEnglishWords/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW_Admin; Password = Morteza@Mm@13811386;"
+    "MySqlServerConnectionString": "Your Connection Strings"
   },
   "ApplicationSettings": {
     "JwtSettings": {
