--- a/LearningEnglishWords/appsettings.Development.json
+++ b/LearningEnglishWords/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlServerConnectionString": "Your Connection Strings"
+    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW_Admin; Password = Mm@13811386;"
   },
   "ApplicationSettings": {
     "JwtSettings": {
