--- a/LearningEnglishWords/nlog.config
+++ b/LearningEnglishWords/nlog.config
@@ -12,22 +12,17 @@
 	<targets async="true">
 
 		<target xsi:type="File" name="LogErrorToFile"
-			fileName="${basedir}/Logs/Error.log"
-			layout="${date}|${level:uppercase=true}|${message}"
+					fileName="${basedir}/Logs/Error.log"
+					layout="${date}|${level:uppercase=true}|${message}"
 			/>
-		
-		<target xsi:type="File" name="LogTraceToDebugFile"
-			fileName="${basedir}/Logs/TraceToDebug.log"
+
+		<target xsi:type="File" name="LogTraceToInfoFile"
+			fileName="${basedir}/Logs/TraceToInfo.log"
 			layout="${date}|${level:uppercase=true}|${message}"
 			/>
 
 		<target xsi:type="File" name="LogWarningFile"
 			fileName="${basedir}/Logs/Warning.log"
-			layout="${date}|${level:uppercase=true}|${message}"
-			/>
-
-		<target xsi:type="File" name="LogInfoFile"
-			fileName="${basedir}/Logs/Info.log"
 			layout="${date}|${level:uppercase=true}|${message}"
 			/>
 
@@ -63,10 +58,9 @@
 		<!-- BlackHole without writeTo -->
 		<logger name="Microsoft.*" maxlevel="Info" final="true" />
 		<!--<logger name="*" level="Fatal" writeTo="gmail" />-->
-		<logger name="*" level="Fatal" writeTo="LogFatalToFile" />
-		<logger name="*" level="Error" writeTo="LogErrorToFile" />
+		<!--<logger name="*" level="Fatal" writeTo="LogFatalToFile" />-->
+		<!--<logger name="*" level="Error" writeTo="LogErrorToFile" />-->
 		<logger name="*" level="Warn" writeTo="LogWarningFile" />
-		<!--<logger name="*" level="Info" writeTo="LogInfoFile" />-->		
-		<!--<logger name="*" minlevel="Trace" maxlevel="Debug" writeTo="LogTraceToDebugFile" />-->
+		<logger name="*" minlevel="Trace" maxlevel="Info" writeTo="LogTraceToInfoFile" />
 	</rules>
 </nlog>
