--- a/Softmax Libraries/Softmax.Result.Server/Dtat.Result.Server.csproj
+++ b/Softmax Libraries/Softmax.Result.Server/Dtat.Result.Server.csproj
@@ -6,7 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="DTAT" Version="1.0.4" />
-		<PackageReference Include="FluentResults" Version="3.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 	</ItemGroup>
 
 </Project>
