[BUGFIX] Make some changes!

--- a/LearningEnglishWords/appsettings.json
+++ b/LearningEnglishWords/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW_Admin; Password = Mm@13811386; TrustServerCertificate=True"
+    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW; Password = M9ya542p!; TrustServerCertificate=True"
   },
   "ApplicationSettings": {
     "JwtSettings": {
@@ -23,7 +23,7 @@
     "Password": "y?rDWD(=@{UQ!L"
   },
   "SwaggerSettings": {
-    "AuthenticationUrl": "https://localhost:5001/api/v1/users/LoginByOAuth",
+    "AuthenticationUrl": "https://api.lew.mbteam.ir/api/v1/users/LoginByOAuth",
     "EnableEnumSchema": true,
     "EnableXmlDocs": true,
     "EnableDefaultActionDescription": true,
