--- a/LearningEnglishWords/nlog.config
+++ b/LearningEnglishWords/nlog.config
@@ -58,9 +58,9 @@
 		<!-- BlackHole without writeTo -->
 		<logger name="Microsoft.*" maxlevel="Info" final="true" />
 		<!--<logger name="*" level="Fatal" writeTo="gmail" />-->
-		<!--<logger name="*" level="Fatal" writeTo="LogFatalToFile" />-->
+		<logger name="*" level="Fatal" writeTo="LogFatalToFile" />
 		<!--<logger name="*" level="Error" writeTo="LogErrorToFile" />-->
 		<logger name="*" level="Warn" writeTo="LogWarningFile" />
-		<logger name="*" minlevel="Trace" maxlevel="Info" writeTo="LogTraceToInfoFile" />
+		<!--<logger name="*" minlevel="Trace" maxlevel="Info" writeTo="LogTraceToInfoFile" />-->
 	</rules>
 </nlog>
