[FEATURE] Upgrade nuget packages!

--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -9,7 +9,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlServerConnectionString": "Data Source=.; Initial Catalog=LEW; Integrated Security=true; TrustServerCertificate=True"
+    "SqlConnectionString": "Data Source=.; Initial Catalog=LEW; Integrated Security=true; TrustServerCertificate=True"
+  },
+  "SwaggerAuthorization": {
+    "Disable": true
   },
   "SwaggerSettings": {
     "AuthenticationUrl": "https://localhost:5001/api/v1/users/LoginByOAuth",
