--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -1,8 +1,5 @@
 {
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MySqlServerConnectionString": "Data Source = 62.204.61.142;  Initial Catalog = mbteamir_LEW; User ID = mbteamir_LEW; Password = M9ya542p!; TrustServerCertificate=True"
-  },
   "ApplicationSettings": {
     "JwtSettings": {
       "TokenExpiresTime": 60,
@@ -19,8 +16,8 @@
     }
   },
   "SwaggerAuthorization": {
-    "UserName": "09366351724",
-    "Password": "y?rDWD(=@{UQ!L"
+    "Username": "admin",
+    "Password": "admin"
   },
   "SwaggerSettings": {
     "AuthenticationUrl": "https://api.lew.mbteam.ir/api/v1/users/LoginByOAuth",
